--- a/disksf.html
+++ b/disksf.html
@@ -35,8 +35,8 @@ var timelim = 13; // max work milliseconds per anim call
 /*
  *   Model parameters.
  */
-var ar, br, an, bn, sep, ax, ay, bx, by ;
-
+var ar, br, an, bn, sep, ax, ay, bx, by, arar, brbr, sepd2 ;
+var largeayes, largebyes, smallano, smallbno, wps, ws, wns, wne ;
 /*
  *   Rendering engine.
  */
@@ -54,6 +54,9 @@ function doanim() {
     ax = xoff * zoom + width / 2 - 0.5 * (sep + br - ar) * sc;
     ax = Math.floor(ax) + 0.5;
     ay = Math.floor(ay) + 0.5;
+    arar = ar * ar ;
+    brbr = br * br ;
+    sepd2 = sep * 0.5 ;
     by = ay;
     bx = ax + sep * sc;
     san = Math.sin(Math.PI * 2 / an);
@@ -75,6 +78,79 @@ function doanim() {
     }
     return false; // suppress submit
 }
+//   Radix sort on pairs of doubles using typed arrays.
+//   Accepts a work array that has to be as large as the
+//   input array; we ping-pong between the two.
+//   This version also sorts an auxilliary array in the same way.
+function coordinateSort(p, st, e, aux) {
+   var n = e - st ;
+   var cnts = new Array(8 * 256) ;
+   cnts.fill(0) ;
+   var bytes = new Uint8Array(p.buffer, st * 8, n * 8) ;
+   var wbytes = new Uint8Array(p.buffer, e * 8, n * 8) ;
+   for (var i=0; i<bytes.length; i += 16) {
+      for (var j=0; j<8; j++) {
+         cnts[j*256+bytes[i+j]] += 2 ;
+      }
+   }
+   for (var i=0; i<8; i++) {
+      var xor = 0 ;
+      if (i == 7) {
+         xor = 128 ;
+      }
+      var s = 0 ;
+      for (var j=0; j<256; j++) {
+         var ind = i*256 + (j ^ xor) ;
+         var s2 = s + cnts[ind] ;
+         cnts[ind] = s ;
+         s = s2 ;
+      }
+   }
+   var s2 = e ;
+   var e2 = s2 + n ;
+   var negcnt = cnts[7*256] - 2 ;
+   for (var i = 0; i < 8; i++) {
+      for (var j = 0; j < n; j += 2) {
+         var off = i*256 + bytes[i+j*8] ;
+         var dest = cnts[off] ;
+         cnts[off] = dest + 2 ;
+         p[s2 + dest] = p[st + j] ;
+         p[s2 + dest + 1] = p[st + j + 1] ;
+         aux[(s2 + dest) >> 1] = aux[(st + j) >> 1] ;
+      }
+      var t = e ;
+      e = e2 ;
+      e2 = t ;
+      t = st ;
+      st = s2 ;
+      s2 = t ;
+      var t3 = bytes ;
+      bytes = wbytes ;
+      wbytes = t3 ;
+   }
+   for (var i = 0; i + i < negcnt; i += 2) {
+      var t2 = p[st + i];
+      p[st + i] = p[st + negcnt - i] ;
+      p[st + negcnt - i] = t2 ;
+      t2 = p[st + i + 1];
+      p[st + i + 1] = p[st + negcnt - i + 1] ;
+      p[st + negcnt - i + 1] = t2 ;
+      var t4 = aux[(st + i) >> 1] ;
+      aux[(st + i) >> 1] = aux[(st + negcnt - i) >> 1] ;
+      aux[(st + negcnt - i) >> 1] = t4 ;
+   }
+}
+function dd(pp, i, j) {
+   var dy = pp[i] - pp[j] ;
+   var dx = pp[i + 1] - pp[j + 1] ;
+   return dx * dx + dy * dy ;
+}
+//
+//  Frontier-based BFS.
+//
+const MAXCOORDS = 4800000 ;
+var p = new Float64Array(MAXCOORDS*2) ;
+var hint = new Uint8Array(MAXCOORDS) ;
 // state 0: pick a new point and initialize
 // state 1: chase through points, and accumulate
 // state 2: render
@@ -116,76 +192,144 @@ function dowork() {
                    break ;
                 }
             }
-            pts = [];
-            ox = x;
-            oy = y;
+            x -= sep / 2 ;
             ord = 0;
-            p = [];
             drawit = false;
-            mindist = 1000;
             incirc = false;
             state = 1;
             ii = 0;
+            p[0] = y ;
+            p[1] = x ;
+            hint[0] = 0 ;
+            wps = 0 ;
+            ws = 0 ;
+            wns = 2 ;
+            wne = wns ;
+            largeayes = 0 ;
+            largebyes = 0 ;
+            smallano = 1e10 ;
+            smallbno = 1e10 ;
         }
         if (state == 1) {
             var sqrt = Math.sqrt;
-            for (; ii<renderlim; ii++) {
-                if ((ii & 8191) == 0 && performance.now() - start > timelim) {
-                    return;
-                }
-                var t = sqrt(x * x + y * y) - ar;
-                if (t <= 0) {
-                    t = - t;
-                    incirc = true;
-                    var nx = x * can + y * san;
-                    y = y * can - x * san;
-                    x = nx;
-                }
-                if (t < mindist) {
-                    mindist = t;
-                }
-                x -= sep;
-                var t = sqrt(x * x + y * y) - br;
-                if (t <= 0) {
-                    t = - t;
-                    incirc = true;
-                    var nx = x * cbn + y * sbn;
-                    y = y * cbn - x * sbn;
-                    x = nx;
-                }
-                if (t < mindist) {
-                    mindist = t;
-                }
-                var xx = (x + sep) * sc + ax;
-                if (xx + mindist >= 0 && xx - mindist <= width) {
-                    var yy = y * sc + ay;
-                    if (yy + mindist >= 0 && yy - mindist <= height) {
-                        p.push((x + sep) * sc + ax, y * sc + ay);
-                    }
-                }
-                ord++;
-                var dx = x + sep - ox;
-                if (dx * dx < epseps) {
-                    var dy = y - oy;
-                    if (dx * dx + dy * dy < epseps) {
-                        drawit = true;
-                        break;
-                    }
-                }
-                x += sep;
+            for (ii=1; ; ii++) {
+               if (wns == ws) {
+                  drawit = true;
+                  break ;
+               }
+               if (performance.now() - start > timelim) {
+                  return;
+               }
+               if (wns > 2 * renderlim) {
+                  break ;
+               }
+               for (var i=ws; i<wns; i += 2) {
+                  y = p[i] ;
+                  x = p[i + 1] ;
+                  var h = hint[i>>1] ;
+                  var xm = x - sepd2 ;
+                  var xp = x + sepd2 ;
+                  var pp = xp * xp + y * y ;
+                  if (wne + 16 > MAXCOORDS) {
+                     throw "Ran out of workspace" ;
+                  }
+                  if (pp < arar) {
+                     incirc = true ;
+                     if (h !== 2) {
+                        var nx = xp * can + y * san;
+                        var ny = y * can - xp * san;
+                        hint[wne>>1] = 1 ;
+                        p[wne++] = ny ;
+                        p[wne++] = nx - sepd2 ;
+                     }
+                     if (h !== 1) {
+                        var nx = xp * can - y * san;
+                        var ny = y * can + xp * san;
+                        hint[wne>>1] = 2 ;
+                        p[wne++] = ny ;
+                        p[wne++] = nx - sepd2 ;
+                     }
+                     largeayes = Math.max(largeayes, pp) ;
+                  } else {
+                     smallano = Math.min(smallano, pp) ;
+                  }
+                  pp = xm * xm + y * y ;
+                  if (pp < brbr) {
+                     incirc = true ;
+                     if (h !== 4) {
+                        var nx = xm * cbn + y * sbn;
+                        var ny = y * cbn - xm * sbn;
+                        hint[wne>>1] = 3 ;
+                        p[wne++] = ny ;
+                        p[wne++] = nx + sepd2 ;
+                     }
+                     if (h !== 3) {
+                        var nx = xm * cbn - y * sbn;
+                        var ny = y * cbn + xm * sbn;
+                        hint[wne>>1] = 4 ;
+                        p[wne++] = ny ;
+                        p[wne++] = nx + sepd2 ;
+                     }
+                     largebyes = Math.max(largebyes, pp) ;
+                  } else {
+                     smallbno = Math.min(smallbno, pp) ;
+                  }
+               }
+               coordinateSort(p, wns, wne, hint) ;
+               var wpi = wps ;
+               var wci = ws ;
+               var wi = wns ;
+               for (var i=wns; i<wne; i += 2) {
+                  var skipit = 0 ;
+                  for (var j=i+2; skipit === 0 && j<wne && p[i] + eps > p[j]; j += 2) {
+                     if (dd(p, i, j) < epseps) {
+                        skipit = 1 ;
+                     }
+                  }
+                  while (wpi < ws && p[i] > p[wpi] + eps) {
+                     wpi += 2 ;
+                  }
+                  for (var j=wpi; skipit === 0 && j<ws && p[i] + eps > p[j]; j += 2) {
+                     if (dd(p, i, j) < epseps) {
+                        skipit = 1 ;
+                     }
+                  }
+                  while (wci < wns && p[i] > p[wci] + eps) {
+                     wci += 2 ;
+                  }
+                  for (var j=wci; skipit === 0 && j<wns && p[i] + eps > p[j]; j += 2) {
+                     if (dd(p, i, j) < epseps) {
+                        skipit = 1 ;
+                     }
+                  }
+                  if (skipit === 0) {
+                     hint[wi>>1] = hint[i>>1] ;
+                     p[wi++] = p[i] ;
+                     p[wi++] = p[i + 1] ;
+                  }
+               }
+            //   console.log("At d " + d + " count " + (wi-wns)/2) ;
+               wps = ws ;
+               ws = wns ;
+               wns = wi ;
+               wne = wi ;
+               ord = wi / 2 ;
             }
-            mindist *= sc;
             if (!drawit) {
                if (renderlim < 1000000) {
-                   deepest = renderlim;
+                   deepest = renderlim-1; 
                    noticeOrder(">" + deepest);
                    renderlim = Math.floor(renderlim * 1.2);
-               } else {
+                   if (renderlim > 1000000) {
+                      renderlim = 1000000 ;
+                   }
+               } else { 
                   if (! setmax) {
-                     deepest = renderlim;
+                     deepest = renderlim-1;
                      noticeOrder(">" + deepest);
                      setmax = true;
-                  }
+                  } 
+ //               drawit = true;
                }
             }
             if (!incirc || !drawit) {
@@ -196,6 +340,9 @@ function dowork() {
             }
         }
         if (state == 2) {
+            mindist = sc * Math.min(
+                 Math.min(ar-Math.sqrt(largeayes), Math.sqrt(smallano) - ar),
+                 Math.min(br-Math.sqrt(largebyes), Math.sqrt(smallbno) - br)) ;
             if (ord > deepest) {
                 deepest = ord;
                 noticeOrder("" + deepest);
@@ -207,20 +354,25 @@ function dowork() {
                 pallete[ord] = "rgb(" + cr + "," + cg + "," + cb + ")";
             }
             ctx.fillStyle = pallete[ord];
+            var abx = 0.5 * (ax + bx);
             if (mindist < 1.5) {
-                for (; ii<p.length; ii += 2) {
+                for (; ii<wi; ii += 2) {
                     if ((ii & 8191) == 0 && performance.now() - start > timelim) {
                         return;
                     }
-                    ctx.fillRect(p[ii], p[ii+1], 1, 1);
+                    y = p[ii] * sc + ay ;
+                    x = p[ii+1] * sc + abx ;
+                    ctx.fillRect(x, y, 1, 1);
                 }
             } else {
-                for (; ii<p.length; ii += 2) {
+                for (; ii<wi; ii += 2) {
                     if ((ii & 8191) == 0 && performance.now() - start > timelim) {
                         return;
                     }
+                    y = p[ii] * sc + ay ;
+                    x = p[ii+1] * sc + abx ;
                     ctx.beginPath();
-                    ctx.arc(p[ii], p[ii+1], mindist-0.5, 0, 2*Math.PI, false);
+                    ctx.arc(x, y, mindist-0.5, 0, 2*Math.PI, false);
                     ctx.fill();
                 }
             }
@@ -253,7 +405,7 @@ function getUIParams() {
     zoom = getvalue("zoom");
 }
 function noticeOrder(s) {
-    document.getElementById("order").innerText = ">" + deepest;
+    document.getElementById("order").innerText = s;
 }
 function changeOrigin(dir) {
    // 37: left 38: up 39: right 40: down
@@ -388,7 +540,7 @@ function start() {
     var np = document.getElementById("normalpage") ;
     addEvent(np, "keydown", ignore);
     addEvent(np, "keypress", ignore);
-    dorandom();
+    doanim();
 }
 window.onload = start;
 /*
@@ -476,7 +628,7 @@ window.onload = start;
         </p>
         <p><label for="an">Spin A:&nbsp;</label>
             <span id="showan"></span>
-            <input id="an" type="range" step="1" min="2" max="20" value="7">
+            <input id="an" type="range" step="1" min="2" max="20" value="3">
         </p>
         <p><label for="brad">Radius B:&nbsp;</label>
             <span id="showbrad"></span>
@@ -484,11 +636,11 @@ window.onload = start;
         </p>
         <p><label for="bn">Spin B:&nbsp;</label>
             <span id="showbn"></span>
-            <input id="bn" type="range" step="1" min="2" max="20" value="7">
+            <input id="bn" type="range" step="1" min="2" max="20" value="3">
         </p>
         <p><label for="dist">Separation:&nbsp;</label>
             <span id="showdist"></span>
-            <input id="dist" min="0" step="0.001" max="10" type="range" value="2.4">
+            <input id="dist" min="0" step="0.001" max="10" type="range" value="3.6">
         </p>
         <p><label for="zoom">Zoom:&nbsp;</label>
             <span id="showzoom"></span>
