--- a/dx.html
+++ b/dx.html
@@ -59,19 +59,6 @@ function drawcirc(ctx, x, y, r) {
     ctx.arc(x, y, r, 0, 2*Math.PI, false);
     ctx.stroke();
 }
-var rbm, intwidth, intwidth32 ;
-function checkRendered(width, height) {
-   intwidth = (width + 31) >> 5 ;
-   intwidth32 = intwidth * 32 ;
-   var needed = intwidth * height ;
-   if (rbm === undefined || rbm.length < needed) {
-      rbm = new Uint32Array(needed) ;
-   } else {
-      for (var i=0; i<needed; i++) {
-         rbm[i] = 0 ;
-      }
-   }
-}
 function doanim() {
     getUIParams();
     var h = Math.max(ar, br) * 2;
@@ -91,7 +78,6 @@ function doanim() {
     sbn = -Math.sin(Math.PI * 2 / bn);
     cbn = Math.cos(Math.PI * 2 / bn);
     ctx.clearRect(0, 0, canvas.width, canvas.height);
-    checkRendered(width, height) ;
     drawcirc(ctx, ax, ay, ar * sc);
     drawcirc(ctx, bx, by, br * sc);
     deepest = 0;
@@ -201,8 +187,8 @@ function doworkfull() {
                    var y0 = (height * Math.random()) ;
                    x = (x0 - ax) / sc ;
                    y = (y0 - ay) / sc ;
-                   if (Math.hypot(x, y) >= ar && Math.hypot(x-sep, y) >= br) {
-                      continue ;
+                   if (Math.hypot(x, y) < ar || Math.hypot(x-sep, y) < br) {
+                      break ;
                    }
                 } else if (pttype == 2) {
                    x = Math.random() * 2 * 3.14159265358979 ;
@@ -213,17 +199,11 @@ function doworkfull() {
                       y = (br - 2 * eps) * Math.sin(x) ;
                       x = sep + (br - 2 * eps) * Math.cos(x) ;
                    }
+                   break ;
                 } else {
                    x = sep / 2 ;
                    y = 0 ;
-                }
-                var tx = (x * sc + ax) | 0;
-                var ty = (y * sc + ay) | 0;
-                if (tx >= 0 && tx < width && ty >= 0 && ty < width) {
-                   var off = ty * intwidth32 + tx ;
-                   if (0 == ((rbm[off>>5] >> (off & 31)) & 1)) {
-                      break ;
-                   }
+                   break ;
                 }
             }
             x -= sep / 2 ;
@@ -402,25 +382,17 @@ function doworkfull() {
                     if ((ii & 8191) == 0 && performance.now() - start > timelim) {
                         return;
                     }
-                    y = (p[ii] * sc + ay) | 0 ;
-                    x = (p[ii+1] * sc + abx) | 0 ;
-                    if (y >= 0 && y < height && x >= 0 && x < width) {
-                       var off = y * intwidth32 + x ;
-                       rbm[off>>5] |= 1<<(off&31);
-                       ctx.fillRect(x, y, 1, 1);
-                    }
+                    y = p[ii] * sc + ay ;
+                    x = p[ii+1] * sc + abx ;
+                    ctx.fillRect(x, y, 1, 1);
                 }
             } else {
                 for (; ii<wi; ii += 2) {
                     if ((ii & 8191) == 0 && performance.now() - start > timelim) {
                         return;
                     }
-                    y = (p[ii] * sc + ay) | 0 ;
-                    x = (p[ii+1] * sc + abx) | 0 ;
-                    if (y >= 0 && y < height && x >= 0 && x < width) {
-                       var off = y * intwidth32 + x ;
-                       rbm[off>>5] |= 1<<(off&31);
-                    }
+                    y = p[ii] * sc + ay ;
+                    x = p[ii+1] * sc + abx ;
                     ctx.beginPath();
                     ctx.arc(x, y, mindist-0.5, 0, 2*Math.PI, false);
                     ctx.fill();
@@ -449,8 +421,8 @@ function doworkgen() {
                    var y0 = (height * Math.random()) ;
                    x = (x0 - ax) / sc ;
                    y = (y0 - ay) / sc ;
-                   if (Math.hypot(x, y) >= ar && Math.hypot(x-sep, y) >= br) {
-                      continue ;
+                   if (Math.hypot(x, y) < ar || Math.hypot(x-sep, y) < br) {
+                      break ;
                    }
                 } else if (pttype == 2) {
                    x = Math.random() * 2 * 3.14159265358979 ;
@@ -461,17 +433,11 @@ function doworkgen() {
                       y = (br - 2 * eps) * Math.sin(x) ;
                       x = sep + (br - 2 * eps) * Math.cos(x) ;
                    }
+                   break ;
                 } else {
                    x = sep / 2 ;
                    y = 0 ;
-                }
-                var tx = (x * sc + ax) | 0;
-                var ty = (y * sc + ay) | 0;
-                if (x >= 0 && x < width && y >= 0 && y < width) {
-                   var off = ty * intwidth32 + tx ;
-                   if (0 == ((rbm[off>>5] >> (off & 31)) & 1)) {
-                      break ;
-                   }
+                   break ;
                 }
             }
             ox = x;
@@ -570,27 +536,15 @@ function doworkgen() {
                     if ((ii & 8191) == 0 && performance.now() - start > timelim) {
                         return;
                     }
-                    y = p[ii+1] | 0 ;
-                    x = p[ii] | 0 ;
-                    if (y >= 0 && y < height && x >= 0 && x < width) {
-                       var off = y * intwidth32 + x ;
-                       rbm[off>>5] |= 1<<(off&31);
-                       ctx.fillRect(x, y, 1, 1);
-                    }
+                    ctx.fillRect(p[ii], p[ii+1], 1, 1);
                 }
             } else {
                 for (; ii<plen; ii += 2) {
                     if ((ii & 8191) == 0 && performance.now() - start > timelim) {
                         return;
                     }
-                    y = p[ii+1] | 0 ;
-                    x = p[ii] | 0 ;
-                    if (y >= 0 && y < height && x >= 0 && x < width) {
-                       var off = y * intwidth32 + x ;
-                       rbm[off>>5] |= 1<<(off&31);
-                    }
                     ctx.beginPath();
-                    ctx.arc(x, y, mindist-0.5, 0, 2*Math.PI, false);
+                    ctx.arc(p[ii], p[ii+1], mindist-0.5, 0, 2*Math.PI, false);
                     ctx.fill();
                 }
             }
@@ -744,6 +698,39 @@ function noticeOrder(s) {
         });
         doanim();
       }
+      function shiftx(){
+        xoff +=10
+        doanim();
+      }
+
+      var isDragging = false;
+      var touchStartX, touchStartY;
+
+      document.addEventListener('touchstart', function(e) {
+          e.preventDefault();
+          isDragging = true;
+          touchStartX = e.touches[0].clientX;
+          touchStartY = e.touches[0].clientY;
+      });
+
+      document.addEventListener('touchend', function(e) {
+        isDragging = false;
+      });
+
+      document.addEventListener('touchmove', function(e) {
+        if (isDragging === true) {
+          e.preventDefault();
+          var touchX = e.touches[0].clientX - touchStartX;
+          var touchY = e.touches[0].clientY - touchStartY;
+
+          xoff = touchX;
+          yoff = touchY;
+          doanim();
+        }
+      });
+
+
+      
       window.onload = start;
 </script>
     <style>
@@ -930,7 +917,7 @@ function noticeOrder(s) {
         />
       </div>
 
-      <button class="button" onclick="onlySlider(2)">N1</button>
+      <button class="button" onclick="shiftx(), onlySlider(2)">N1</button>
       <div class="slide_box" id="slide_box2">
         <input
           type="range"
