--- a/dx.html
+++ b/dx.html
@@ -1009,7 +1009,7 @@ function noticeOrder(s) {
         onclick="dorandom()"
         style="color: #f4f4f4; background-color: #f4f4f4"
       >
-        rand
+        ran
       </button>
     </div>
   </body>
